# Corstone-for-Arduino

./: .gitignore  .gitmodules  README.md  boards.txt  platform.txt  setup.sh
cores/arm/: Arduino.h  Uart.cpp  Uart.h  WInterrupts.c  api  delay.c  main.c  main.cpp  pulse.c  tone.c  wiring_analog.c  wiring_digital.c  wiring_shift.c
libraries/Ethernet/: library.properties
libraries/Ethernet/src/: Ethernet.cpp  Ethernet.h  EthernetClient.cpp  EthernetClient.h  EthernetUdp.cpp  EthernetUdp.h
libraries/SPI/: library.properties
system/: CMakeLists.txt  build.sh  freertos_adaptation.c  system.c  test_main.c
system/freertos-config/: FreeRTOSConfig.h
system/lib/lwip/: CMakeLists.txt
system/lib/lwip/src/: lwip_emac_netif.c  lwip_stack.c
system/lib/lwip/src/include/: lwip_emac_netif.h  lwipopts.h
system/lib/lwip/src/lwip_osal/: sys_arch.c
tools/: run.sh
variants/corstone-300/: c.flags.txt  variant.cpp  variant.h
